--- a/appComunidadEducativa/templates/programas.html
+++ b/appComunidadEducativa/templates/programas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Español Fácil</h1>
+        <h1>Comunidad Educativa</h1>
         <nav>
             <ul>
                 <li><a href="#basico">Programa Básico</a></li>
