--- a/appComunidadEducativa/templates/planes.html
+++ b/appComunidadEducativa/templates/planes.html
@@ -1,8 +1,6 @@
-
-    {% extends "base.html" %}
-    {% block title %} planes{% endblock  %} 
-    
-    {% block content %}
+{% extends "base.html" %}
+{%load static%}
+{% block content %}
 
     <section class="planes-container">
         <h2>Nuestros Planes</h2>
