--- a/appComunidadEducativa/templates/programas.html
+++ b/appComunidadEducativa/templates/programas.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Español Fácil</title>
-    <link rel="stylesheet" href="programas.css">
-</head>
-<body>
+{% extends "base.html" %}
     <header>
         <h1>Comunidad Educativa</h1>
         <nav>
@@ -37,5 +29,3 @@
     <footer>
         <p>&copy; 2025 Español Fácil. Todos los derechos reservados.</p>
     </footer>
-</body>
-</html>
