--- a/appComunidadEducativa/static/css/style.css
+++ b/appComunidadEducativa/static/css/style.css
@@ -90,4 +90,21 @@ button:hover {
     width: 100%;
     max-width: 600px;
     color: black; 
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
