--- a/appComunidadEducativa/static/css/regitro.css
+++ b/appComunidadEducativa/static/css/regitro.css
@@ -5,9 +5,9 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color: white; /* Cambiar el color del texto a blanco para mejor contraste */
+    align-items: center; /* Centrar verticalmente */
+    min-height: 100vh; /* Usar toda la altura de la pantalla */
+    color: #333; /* Color de texto oscuro para mejor contraste */
 }
 
 .login-container {
@@ -21,6 +21,8 @@ body {
 
 fieldset {
     border: none;
+    padding: 0;
+    margin: 0;
 }
 
 h2 {
@@ -30,17 +32,31 @@ h2 {
 
 .input-group {
     margin-bottom: 15px;
+    text-align: left; /* Alinear texto a la izquierda */
 }
 
 .input-group input,
 .genero-container input,
 .genero-container select {
-    width: 100%;
+    width: 100%; /* Ancho completo */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box; /* Asegura que el padding y el borde se incluyan en el ancho total */
     margin-bottom: 10px;
+    font-size: 14px; /* Tamaño de fuente */
+}
+
+.genero-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.genero-container label {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
 }
 
 button {
@@ -52,6 +68,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 16px; /* Tamaño de fuente */
 }
 
 button:hover {
