--- a/appComunidadEducativa/static/css/style.css
+++ b/appComunidadEducativa/static/css/style.css
@@ -1,13 +1,13 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #007bff, #00c6ff); /* Fondo degradado */
+    background: linear-gradient(to right, #6a11cb, #2575fc);
     margin: 0;
     padding: 0;
-    color: white; /* Cambiar el color del texto a blanco para mejor contraste */
+    color: white;
 }
 
 .header {
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -40,11 +40,12 @@ body {
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 5px;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, transform 0.3s;
 }
 
 .navbar ul li a:hover {
     background-color: rgba(255, 255, 255, 0.2);
+    transform: scale(1.1);
 }
 
 .container {
@@ -69,42 +70,43 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 300px;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #333;
 }
 
 button {
     padding: 10px;
-    background-color: #007bff;
+    background-color: #ff6f61;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-left: 10px;
+    transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #ff3b2f;
 }
 
 #resultados {
     margin-top: 20px;
     width: 100%;
     max-width: 600px;
-    color: black; 
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 8px;
+    color: #333;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 .footer {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 10%;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     text-align: center;
-    padding: 10px 0;
-}
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    text-align: center;
-    padding: 10px 0;
+    padding: 3px 0;
+    font-size: 10px;
 }
